Allow jars to be marked as a development-tool to exclude from uber-jar
Closes gh-47320